...
                                            <outlet property="productPriceLabel" destination="JUa-Tb-I2d" id="XeX-af-tVd"/>
                                            <outlet property="productStockLabel" destination="L6Z-ka-67d" id="AY9-Hh-rIf"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="SearchTable"/>
                                </userDefinedRuntimeAttributes>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="YFB-Pn-2vw" firstAttribute="height" secondItem="tsR-hK-woN" secondAttribute="height" id="rgA-Pr-CFM"/>
...
                                <fontDescription key="fontDescription" type="italicSystem" pointSize="16"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0LM-pY-62y">
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Add To Cart"/>
                                <connections>
                                    <action selector="addToCart" destination="327-L7-5LG" eventType="touchUpInside" id="uvd-Bb-qw5"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                            <outlet property="productNameLabel" destination="yiz-ww-SQk" id="m5G-DM-aac"/>
                                            <outlet property="productPriceLabel" destination="4m0-I3-oVF" id="yU0-Ab-U9U"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="CartTable"/>
                                </userDefinedRuntimeAttributes>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="O5h-zU-Rat" firstAttribute="width" secondItem="L4f-tT-DQs" secondAttribute="width" id="JxW-xw-yg3"/>
                            <constraint firstItem="O5h-zU-Rat" firstAttribute="centerY" secondItem="L4f-tT-DQs" secondAttribute="centerY" id="X18-bb-HCV"/>
                            <constraint firstItem="O5h-zU-Rat" firstAttribute="centerX" secondItem="L4f-tT-DQs" secondAttribute="centerX" id="dqs-SF-GSM"/>
                            <constraint firstItem="O5h-zU-Rat" firstAttribute="height" secondItem="L4f-tT-DQs" secondAttribute="height" id="j73-XG-qny"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Cart" image="cart_icon" selectedImage="cart_icon" id="M5v-gt-coN"/>
                    <navigationItem key="navigationItem" id="Q4H-kL-KnK"/>
                    <connections>
                        <outlet property="tableView" destination="O5h-zU-Rat" id="bWx-pF-6Ee"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="teg-qr-9OP" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
