...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        setupTable()
        /// Navigation Bar Items
        navigationItem.leftBarButtonItem = editButtonItem
        deleteButton = UIBarButtonItem(title: "Delete", style: .done, target: self, action: #selector(self.deleteProducts))
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        self.navigationController?.tabBarItem.badgeValue = nil
    }
...
